@@ -13,7 +13,7 @@
   <SourceLookup>True</SourceLookup>
   <AnalysisExceptionsThreshold>10</AnalysisExceptionsThreshold>
   <RuleExceptionsThreshold>1</RuleExceptionsThreshold>
-  <Spelling Locale="nl-NL" />
+  <Spelling Locale="en-US" />
   <OverrideRuleVisibilities>False</OverrideRuleVisibilities>
   <CustomDictionaries SearchFxCopDir="True" SearchUserProfile="True" SearchProjectDir="True" />
   <SearchGlobalAssemblyCache>False</SearchGlobalAssemblyCache>
@@ -21,7 +21,7 @@
   <IgnoreGeneratedCode>False</IgnoreGeneratedCode>
  </ProjectOptions>
  <Targets>
-  <Target Name="$(ProjectDir)/CuttingEdge.Logging/bin/Release/CuttingEdge.Logging.dll" Analyze="True" AnalyzeAllChildren="True" />
+  <Target Name="$(ProjectDir)/CuttingEdge.Logging/bin/Debug/CuttingEdge.Logging.dll" Analyze="True" AnalyzeAllChildren="True" />
  </Targets>
  <Rules>
   <RuleFiles>
@@ -38,93 +38,4 @@
   <Groups />
   <Settings />
  </Rules>
- <FxCopReport Version="1.36">
-  <Targets>
-   <Target Name="$(ProjectDir)/CuttingEdge.Logging.ExampleProviders/bin/Release/CuttingEdge.Logging.ExampleProviders.dll">
-    <Modules>
-     <Module Name="cuttingedge.logging.exampleproviders.dll">
-      <Messages>
-       <Message TypeName="AssembliesShouldHaveValidStrongNames" Category="Microsoft.Design" CheckId="CA2210" Created="2008-10-12 19:30:09Z">
-        <Issue Name="NoStrongName">
-         <Item>'CuttingEdge.Logging.ExampleProviders.dll'</Item>
-        </Issue>
-       </Message>
-      </Messages>
-     </Module>
-    </Modules>
-   </Target>
-   <Target Name="$(ProjectDir)/CuttingEdge.Logging/bin/Release/CuttingEdge.Logging.dll">
-    <Modules>
-     <Module Name="cuttingedge.logging.dll">
-      <Messages>
-       <Message TypeName="AssembliesShouldHaveValidStrongNames" Category="Microsoft.Design" CheckId="CA2210" Created="2008-10-12 19:30:09Z">
-        <Issue Name="NoStrongName">
-         <Item>'CuttingEdge.Logging.dll'</Item>
-        </Issue>
-       </Message>
-      </Messages>
-      <Namespaces>
-       <Namespace Name="CuttingEdge.Logging">
-        <Types>
-         <Type Name="Logger">
-          <Members>
-           <Member Name="#.cctor()">
-            <Messages>
-             <Message TypeName="InitializeReferenceTypeStaticFieldsInline" Category="Microsoft.Performance" CheckId="CA1810" Status="Excluded" Created="2008-10-12 19:30:09Z">
-              <Issue>
-               <Item>'Logger'</Item>
-              </Issue>
-              <Notes>
-               <User Name="Steven">
-                <Note Id="0" />
-               </User>
-              </Notes>
-             </Message>
-            </Messages>
-           </Member>
-          </Members>
-         </Type>
-         <Type Name="LoggingProviderCollection">
-          <Members>
-           <Member Name="#System.Collections.Generic.ICollection&lt;CuttingEdge.Logging.LoggingProviderBase&gt;.Clear()">
-            <Messages>
-             <Message TypeName="DoNotDeclareVirtualMembersInSealedTypes" Category="Microsoft.Design" CheckId="CA1048" Status="Excluded" Created="2008-10-12 19:30:09Z">
-              <Issue>
-               <Item>'LoggingProviderCollection.System.Collections.Generic.ICollection&lt;CuttingEdge.Logging.LoggingProviderBase&gt;.Clear()'</Item>
-              </Issue>
-              <Notes>
-               <User Name="Steven">
-                <Note Id="2" />
-               </User>
-              </Notes>
-             </Message>
-            </Messages>
-           </Member>
-          </Members>
-         </Type>
-        </Types>
-       </Namespace>
-      </Namespaces>
-     </Module>
-    </Modules>
-   </Target>
-  </Targets>
-  <Notes>
-   <User Name="Steven">
-    <Note Id="0" Modified="2008-10-12 19:30:32Z">The static constructor must be used.</Note>
-    <Note Id="2" Modified="2008-10-12 19:30:57Z">This seems to be a bug in FxCop. The Clear() method is not declared virtual and is declared in a base type.</Note>
-   </User>
-  </Notes>
-  <Rules>
-   <Rule TypeName="AssembliesShouldHaveValidStrongNames" Category="Microsoft.Design" CheckId="CA2210">
-    <Resolution Name="NoStrongName">Sign {0} with a strong name key.</Resolution>
-   </Rule>
-   <Rule TypeName="DoNotDeclareVirtualMembersInSealedTypes" Category="Microsoft.Design" CheckId="CA1048">
-    <Resolution Name="Default">'{0}' is a virtual member declared in a sealed type. Mark the member non-virtual or, if the type should be extensible, unseal it.</Resolution>
-   </Rule>
-   <Rule TypeName="InitializeReferenceTypeStaticFieldsInline" Category="Microsoft.Performance" CheckId="CA1810">
-    <Resolution Name="Default">Initialize all static fields in {0} when those fields are declared and remove the explicit static constructor.</Resolution>
-   </Rule>
-  </Rules>
- </FxCopReport>
 </FxCopProject>
