@@ -1,5 +1,14 @@
 ﻿Version [Version Number] ([Friendly Version Number]) [Release Date]
 
+Version vNext
+	General description:
+	
+	Code changes:
+		-Reevaluated the use of FxCop and fixed some by FxCop reported issues in the code or added the 
+		 SuppressMessageAttribute to the code. Originally these excludes were added in the FxCop file, but 
+		 adding the attributes to code is more maintainable and discoverable.
+		 
+
 Version 1.2.0.10042 (1.2) 2010-02-11
 	General description:
 		This release has one small bug fix and several new features. The biggest new features are the ability
